improving the code style and add docker compose