@@ -12,10 +12,14 @@ import com.task.task_service.models.enums.ChangeType;
 import com.task.task_service.repository.AppRepository;
 import com.task.task_service.repository.ChangeRepository;
 import com.task.task_service.service.ChangeService;
+import jakarta.transaction.Transactional;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.cache.CacheManager;
+import org.springframework.cache.support.SimpleValueWrapper;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
@@ -27,31 +31,30 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 @FieldDefaults(makeFinal = true,level = AccessLevel.PRIVATE)
 public class ChangeServiceImpl implements ChangeService {
-
     RestTemplate restTemplate;
     AppRepository appRepository;
     ChangeRepository changeRepository;
+    CacheManager cacheManager;
 
     static String GITHUB_URL = "https://api.github.com/repos/";
-    static String AUTH_TOKEN = "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";
+    @Value("${github.auth.token}")
+    static String AUTH_TOKEN;
 
     @Override
     public List<ChangeResponse> getChanges(String uniqueCode) {
 
         List<Change> changesByAppUniqueCode = changeRepository.getChangesByAppUniqueCode(uniqueCode);
         log.info("result changes: "+changesByAppUniqueCode);
-        List<ChangeResponse> collect = changesByAppUniqueCode
+        return changesByAppUniqueCode
                 .stream()
                 .map(this::mapToChangeResponse)
-                .collect(Collectors.toList());
-        return collect;
+                .toList();
 
     }
 
@@ -66,61 +69,65 @@ public class ChangeServiceImpl implements ChangeService {
     }
 
     @Override
+    @Transactional
     public void loadAppChanges(String uniqueCode) throws AppNotFoundException {
         App app = appRepository.findAppByUniqueCode(uniqueCode)
                 .orElseThrow(() -> new AppNotFoundException("app not found"));
-        log.info("app: "+app.getName());
+
         GitHubRequest gitHubRequest = GitHubRequest
                 .builder()
                 .appName(app.getName())
                 .userName(app.getGitHubUserName())
                 .build();
+
         loadChange(app, gitHubRequest, "issues");
         loadChange(app, gitHubRequest, "pulls");
-
     }
-
-    //TODO create more quickly
 
     @Override
     public synchronized void loadChange(App app, GitHubRequest gitHubRequest, String changeType) {
-        HttpHeaders httpHeaders = new HttpHeaders();
-        httpHeaders.set("Authorization","token "+AUTH_TOKEN);
+        Object cachedChangesObject = cacheManager.getCache("githubChanges").get(changeType);
+        if (cachedChangesObject != null && cachedChangesObject instanceof SimpleValueWrapper wrapper) {
+            Object value = wrapper.get();
+            if (value instanceof List) {
+                List<Change> cachedChanges = (List<Change>) value;
+                saveChanges(app, cachedChanges, changeType);
+                return;
+            }
+        }
 
-        String url = GITHUB_URL  + gitHubRequest.getUserName() + "/" + gitHubRequest.getAppName()+"/"+changeType;
+        HttpHeaders httpHeaders = new HttpHeaders();
+        httpHeaders.set("Authorization", "token " + AUTH_TOKEN);
+
+        String url = GITHUB_URL + gitHubRequest.getUserName() + "/" + gitHubRequest.getAppName() + "/" + changeType;
         HttpEntity<Void> httpEntity = new HttpEntity<>(httpHeaders);
+
         ResponseEntity<String> exchange = restTemplate.exchange(
                 url,
                 HttpMethod.GET,
                 httpEntity,
                 String.class
         );
-        log.info("exchange:" + exchange);
+        log.info("вызов github api");
+
         List<Change> changes = createChangeFromJson(exchange.getBody());
-        log.info("changes:" + changes);
-        List<Change> changeList = addChangeType(changes,changeType);
-        log.info("changesList:" + changeList);
-        changeList.stream()
-                .filter(change -> changeRepository.findChangeByChangeTitle(change.getChangeTitle()) == null)
-                .forEach(change -> {
-                    change.setAppUniqueCode(app.getUniqueCode());
-                    changeRepository.save(change);
-                    log.info("successfully saved");
-                });
+        log.info("create change from json");
+        saveChanges(app, changes, changeType);
+        log.info("changes save :" + changes);
+
+        cacheManager.getCache("githubChanges").put(changeType, changes);
     }
 
-
-    public List<Change> addChangeType(List<Change> changeList, String changeType) {
-        if (changeType.equals("issues")){
-            for (Change change : changeList){
-                change.setChangeType(ChangeType.ISSUES);
-            }
-        }else {
-            for (Change change : changeList){
-                change.setChangeType(ChangeType.PULL_REQUESTS);
-            }
-        }
-        return changeList;
+    public void saveChanges(App app, List<Change> changes, String changeType) {
+        List<Change> changesToSave = changes.stream()
+                .filter(change -> !changeRepository.existsByChangeTitle(change.getChangeTitle()))
+                .map(change -> {
+                    change.setAppUniqueCode(app.getUniqueCode());
+                    change.setChangeType(changeType.equals("issues") ? ChangeType.ISSUES : ChangeType.PULL_REQUESTS);
+                    return change;
+                })
+                .toList();
+        changeRepository.saveAll(changesToSave);
     }
 
     @Override
